fix: mobil görünüm için text wrap fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,16 +73,6 @@
   body {
     @apply bg-background text-foreground;
   }
-  p,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  span {
-    @apply whitespace-nowrap;
-  }
 }
 
 /* Scrollbar Styles */
